--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tinybase": "^4.0.0-beta.5.3",
     "vite-express": "^0.9.2"
   },
   "devDependencies": {
